--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="visiting_hours">Hours: </string>
     <string name="web">Web: </string>
     <string name="email">Email: </string>
+
+    <string name="tour_details">Click to view more details about this tour</string>
+    <string name="park_details">Click to view more details about this park</string>
 </resources>
