Remove CategoryItem references

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,11 @@
     <string name="visiting_hours">Hours: </string>
     <string name="web">Web: </string>
     <string name="email">Email: </string>
+    
+    <string name="no_web">No web address</string>
+    <string name="no_mail">No email address</string>
+    <string name="no_phone">No phone number</string>
+    <string name="no_hours">Unknown hours</string>
 
     <string name="tour_details">Click to view more details about this tour</string>
     <string name="park_details">Click to view more details about this park</string>
