--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,10 +24,20 @@
     <string name="price">Price: </string>
     
     <string name="no_web">No web address</string>
+    <string name="no_address">Unknown address</string>
     <string name="no_mail">No email address</string>
     <string name="no_phone">No phone number</string>
     <string name="no_hours">Unknown hours</string>
     <string name="no_price">Unknown price</string>
+    <string name="unknown_duration">Unknown duration</string>
+    <string name="no_depart_time">Unknown departure time</string>
+    <string name="no_depart_point">Unknown departure point</string>
+    <string name="no_highlights">It\'s a surprise</string>
+
+    <string name="depart_point">Departure point:</string>
+    <string name="depart_time">Departure time:</string>
+    <string name="duration">Duration:</string>
+    <string name="highlights">Highlights:</string>
 
     <string name="tour_details">Touch to view more details about this tour</string>
     <string name="park_details">Touch to view more details about this park</string>
